discussion/kv_engine/173486/173486_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Add tests for MemOverhead{,Queue,Index}

Expand on testCheckpointManagerMemUsage to test the
base case of a single checkpoint's memory
calculations.

Add a test to validate that the CheckpointManager's
getMemOverhead(), getMemOverheadIndex(), and
getMemOverheadQueue() are calculated correctly as
the sum of all Checkpoints managed by the CM.

Change-Id: I76c920a2dbc99fea1fbe6917dde8450f06f6a62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-20 15:20:12.000000000
Message: 
Patch Set 8: Published edit on patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-04-20 15:20:18.000000000
Message: 
Patch Set 8:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 17:42:44.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45432/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(3372): error C2039: "getCheckpointMaxSize": is not a member of "VBucket" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45432/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38166/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2664:13:
error: enumeration value "NoAccess" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38166/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16811/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33: error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
    const std::string value(vb->getCheckpointMaxSize(), "!");
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16811/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17692/ : FAILURE

Compile error at [2022-04-20T15:55:21.750Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17692/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6469/ : FAILURE

Compile error at [2022-04-20T16:56:32.029Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2664:13:
error: enumeration value "NoAccess" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6469/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18595/ : FAILURE

Compile error at [2022-04-20T16:58:26.491Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18595/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6541/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18932/ : FAILURE

Compile error at [2022-04-20T16:57:36.386Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2664:12:
error: enumeration value ?NoAccess? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18932/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27000/ : FAILURE

Compile error at [2022-04-20T16:59:03.092Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2664:13:
error: enumeration value "NoAccess" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27000/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19633/ : FAILURE

Compile error at [2022-04-20T16:58:13.563Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2664:13:
error: enumeration value "NoAccess" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19633/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15754/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-21 08:07:22.000000000
Message: 
Patch Set 8: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26996/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26996/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6467/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6467/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19630/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19630/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18592/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18928/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18928/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17687/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17687/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6529/ : FAILURE

Compile error at [2022-04-20T16:46:33.047Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6529/ )
----------------------------------------------------------------------------------------------------------------------
